Uploading to see if this fixes bug borders on safari

--- a/styles/PortfolioMk2.css
+++ b/styles/PortfolioMk2.css
@@ -93,6 +93,7 @@ main {
 }
 
 .header h2 {
+  display: inline-block;
   border-left: dotted 1px #fff;
   border-right: dotted 1px #fff;
   display: inline-block;
